fix: overflowing text into hero section on mobile screens

--- a/src/components/Features/Features.scss
+++ b/src/components/Features/Features.scss
@@ -2,7 +2,9 @@
 @import '../../styles/mixins';
 
 .features {
-  margin: 5rem 0;
+  @media (min-width: 768px) {
+    margin: 10rem 0;
+  }
   opacity: 0;
   transition:
     opacity 0.6s ease-out,
